# JSONExplore

./: 404.html  BUILD_AND_PUBLISH.md  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_GUIDE.md  MANIFEST.in  MIGRATION.md  MIGRATION_STRATEGY.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api/: index.html
docs/: LICENSE.txt  NOTICE.txt  api.md  index.md
scripts/: anaconda_test_commands.bat  test_installation.py
search/: search_index.json
src/: __init__.py
src/jsonanatomy/: __init__.py  _version.py  file_reader.py
src/jsonexplore/: Explore.py  Maybe.py  SimpleXML.py  Xplore.py  __init__.py  file_reader.py  schema.py
src/jsonscout/: Explore.py  Maybe.py  SimpleXML.py  Xplore.py  __init__.py
